Made categories#show and words#show accept name instead of id
